--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
     <div id="wrapper">
         <nav> <!--Barra navegación-->
-            <div class="topnav" id="myTopnav"> 
+            <div class="topnav" id="topnav1"> 
                 <a href="#"> Casa</a>
                 <a href="#intro">Introducción</a>
                 <a href="#Personajes"> Personajes</a>
                 <a href="#footer"> Redes sociales</a>
                 <a href="#galería">Galería</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
+                <i class="fa fa-bars"></i>
                 </a>
             </div>
         </nav>
